// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cascader > Cascader baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell"
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        地址
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-cell__note"
    >
      请选择地址
    </div>
    <div
      class="t-cell__right t-cell__right--middle"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-right"
          >
            <path
              d="M9.5 17.5L15 12L9.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--bottom"
    style="display: none;"
  >
    <!---->
    
    <div
      class="t-cascader"
    >
      <div
        class="t-cascader__title"
      >
        选择地址
      </div>
      <div
        class="t-cascader__close-btn"
      >
        <svg
          class="t-icon t-icon-close"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close"
          >
            <path
              d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <!---->
      <div
        class="t-cascader__content"
      >
        <div
          class="t-cascader__steps"
        >
          
          <div
            class="t-cascader__step"
          >
            <div
              class="t-cascader__step-dot t-cascader__step-dot--last"
            />
            <div
              class="t-cascader__step-label t-cascader__step-label--active"
            >
              选择选项
            </div>
            <svg
              class="t-icon t-icon-chevron-right t-cascader__step-arrow"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
        <!---->
        <!---->
        <div
          class="t-cascader__options-container"
          style="width: 200vw; transform: translateX(-000vw);"
        >
          
          <div
            class="t-cascader__options"
          >
            <div
              class="t-cascader-radio-group-0 slide-enter-from slide-enter-active"
            >
              <div
                class="t-radio-group"
                role="radiogroup"
              >
                
                <div
                  class="t-radio t-radio--right t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    name=""
                    type="radio"
                    value="110000"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--right"
                  >
                    <div
                      class="placeholder"
                    />
                    <!---->
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style=""
                    >
                      北京市
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <div
                  class="t-radio t-radio--right t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    name=""
                    type="radio"
                    value="120000"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--right"
                  >
                    <div
                      class="placeholder"
                    />
                    <!---->
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style=""
                    >
                      天津市
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                
                <!---->
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
  
  
</div>
`;

exports[`Cascader > Cascader checkStrictlyVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell"
    data-v-089206a7=""
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        地址
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-cell__note"
    >
      请选择地址
    </div>
    <div
      class="t-cell__right t-cell__right--middle"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-right"
          >
            <path
              d="M9.5 17.5L15 12L9.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--bottom"
    style="display: none;"
  >
    <!---->
    
    <div
      class="t-cascader"
    >
      <div
        class="t-cascader__title"
      >
        选择地址
      </div>
      <div
        class="t-cascader__close-btn"
      >
        
        <span
          class="confirm-btn"
          data-v-089206a7=""
        >
          确定
        </span>
        
      </div>
      <!---->
      <div
        class="t-cascader__content"
      >
        <div
          class="t-cascader__steps"
        >
          
          <div
            class="t-cascader__step"
          >
            <div
              class="t-cascader__step-dot t-cascader__step-dot--last"
            />
            <div
              class="t-cascader__step-label t-cascader__step-label--active"
            >
              选择选项
            </div>
            <svg
              class="t-icon t-icon-chevron-right t-cascader__step-arrow"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
        <!---->
        <!---->
        <div
          class="t-cascader__options-container"
          style="width: 200vw; transform: translateX(-000vw);"
        >
          
          <div
            class="t-cascader__options"
          >
            <div
              class="t-cascader-radio-group-0 slide-enter-from slide-enter-active"
            >
              <div
                class="t-radio-group"
                role="radiogroup"
              >
                
                <div
                  class="t-radio t-radio--right t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    name=""
                    type="radio"
                    value="110000"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--right"
                  >
                    <div
                      class="placeholder"
                    />
                    <!---->
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style=""
                    >
                      北京市
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <div
                  class="t-radio t-radio--right t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    name=""
                    type="radio"
                    value="120000"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--right"
                  >
                    <div
                      class="placeholder"
                    />
                    <!---->
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style=""
                    >
                      天津市
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                
                <!---->
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
  
  
</div>
`;

exports[`Cascader > Cascader keysVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell"
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        地址
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-cell__note"
    >
      请选择地址
    </div>
    <div
      class="t-cell__right t-cell__right--middle"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-right"
          >
            <path
              d="M9.5 17.5L15 12L9.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--bottom"
    style="display: none;"
  >
    <!---->
    
    <div
      class="t-cascader"
    >
      <div
        class="t-cascader__title"
      >
        选择地址
      </div>
      <div
        class="t-cascader__close-btn"
      >
        <svg
          class="t-icon t-icon-close"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close"
          >
            <path
              d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <!---->
      <div
        class="t-cascader__content"
      >
        <div
          class="t-cascader__steps"
        >
          
          <div
            class="t-cascader__step"
          >
            <div
              class="t-cascader__step-dot t-cascader__step-dot--last"
            />
            <div
              class="t-cascader__step-label t-cascader__step-label--active"
            >
              选择选项
            </div>
            <svg
              class="t-icon t-icon-chevron-right t-cascader__step-arrow"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
        <!---->
        <!---->
        <div
          class="t-cascader__options-container"
          style="width: 200vw; transform: translateX(-000vw);"
        >
          
          <div
            class="t-cascader__options"
          >
            <div
              class="t-cascader-radio-group-0 slide-enter-from slide-enter-active"
            >
              <div
                class="t-radio-group"
                role="radiogroup"
              >
                
                <div
                  class="t-radio t-radio--right t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    name=""
                    type="radio"
                    value="110000"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--right"
                  >
                    <div
                      class="placeholder"
                    />
                    <!---->
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style=""
                    >
                      北京市
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <div
                  class="t-radio t-radio--right t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    name=""
                    type="radio"
                    value="120000"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--right"
                  >
                    <div
                      class="placeholder"
                    />
                    <!---->
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style=""
                    >
                      天津市
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                
                <!---->
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
  
  
</div>
`;

exports[`Cascader > Cascader lazyVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell"
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        地址
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-cell__note"
    >
      请选择地址
    </div>
    <div
      class="t-cell__right t-cell__right--middle"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-right"
          >
            <path
              d="M9.5 17.5L15 12L9.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--bottom"
    style="display: none;"
  >
    <!---->
    
    <div
      class="t-cascader"
    >
      <div
        class="t-cascader__title"
      >
        选择地址
      </div>
      <div
        class="t-cascader__close-btn"
      >
        <svg
          class="t-icon t-icon-close"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close"
          >
            <path
              d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <!---->
      <div
        class="t-cascader__content"
      >
        <div
          class="t-cascader__steps"
        >
          
          <div
            class="t-cascader__step"
          >
            <div
              class="t-cascader__step-dot t-cascader__step-dot--last"
            />
            <div
              class="t-cascader__step-label t-cascader__step-label--active"
            >
              选择选项
            </div>
            <svg
              class="t-icon t-icon-chevron-right t-cascader__step-arrow"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
        <!---->
        <!---->
        <div
          class="t-cascader__options-container"
          style="width: 200vw; transform: translateX(-000vw);"
        >
          
          <div
            class="t-cascader__options"
          >
            <div
              class="t-cascader-radio-group-0 slide-enter-from slide-enter-active"
            >
              <div
                class="t-radio-group"
                role="radiogroup"
              >
                
                <div
                  class="t-radio t-radio--right t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    name=""
                    type="radio"
                    value="440300"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--right"
                  >
                    <div
                      class="placeholder"
                    />
                    <!---->
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style=""
                    >
                      深圳市
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                
                <!---->
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
  
  
</div>
`;

exports[`Cascader > Cascader mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Cascader 级联选择器
  </h1>
  <p
    class="summary"
  >
    用于多层级数据选择，主要为树形结构，可展示更多的数据
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 基础
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基本用法
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell"
      >
        <div
          class="t-cell__left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          <div
            class="t-cell__title-text"
          >
            地址
            <!---->
          </div>
          <!---->
        </div>
        <div
          class="t-cell__note"
        >
          请选择地址
        </div>
        <div
          class="t-cell__right t-cell__right--middle"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      
      <div
        class="t-overlay"
        style="z-index: 1000; transition-duration: 300ms; display: none;"
      >
        <!---->
      </div>
      <div
        class="t-popup t-popup--bottom"
        style="display: none;"
      >
        <!---->
        
        <div
          class="t-cascader"
        >
          <div
            class="t-cascader__title"
          >
            选择地址
          </div>
          <div
            class="t-cascader__close-btn"
          >
            <svg
              class="t-icon t-icon-close"
              fill="none"
              height="1em"
              style="fill: none; font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="close"
              >
                <path
                  d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <!---->
          <div
            class="t-cascader__content"
          >
            <div
              class="t-cascader__steps"
            >
              
              <div
                class="t-cascader__step"
              >
                <div
                  class="t-cascader__step-dot t-cascader__step-dot--last"
                />
                <div
                  class="t-cascader__step-label t-cascader__step-label--active"
                >
                  选择选项
                </div>
                <svg
                  class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
              
            </div>
            <!---->
            <!---->
            <div
              class="t-cascader__options-container"
              style="width: 200vw; transform: translateX(-000vw);"
            >
              
              <div
                class="t-cascader__options"
              >
                <div
                  class="t-cascader-radio-group-0 slide-enter-from slide-enter-active"
                >
                  <div
                    class="t-radio-group"
                    role="radiogroup"
                  >
                    
                    <div
                      class="t-radio t-radio--right t-radio--block"
                    >
                      <input
                        class="t-radio__original"
                        name=""
                        type="radio"
                        value="110000"
                      />
                      <div
                        class="t-radio__icon t-radio__icon--right"
                      >
                        <div
                          class="placeholder"
                        />
                        <!---->
                      </div>
                      <div
                        class="t-radio__content"
                      >
                        <span
                          class="t-radio__title"
                          style=""
                        >
                          北京市
                        </span>
                        <!---->
                      </div>
                      <!---->
                    </div>
                    <div
                      class="t-radio t-radio--right t-radio--block"
                    >
                      <input
                        class="t-radio__original"
                        name=""
                        type="radio"
                        value="120000"
                      />
                      <div
                        class="t-radio__icon t-radio__icon--right"
                      >
                        <div
                          class="placeholder"
                        />
                        <!---->
                      </div>
                      <div
                        class="t-radio__content"
                      >
                        <span
                          class="t-radio__title"
                          style=""
                        >
                          天津市
                        </span>
                        <!---->
                      </div>
                      <!---->
                    </div>
                    
                    <!---->
                  </div>
                </div>
              </div>
              
            </div>
          </div>
        </div>
        
      </div>
      
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        选项卡风格
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell"
      >
        <div
          class="t-cell__left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          <div
            class="t-cell__title-text"
          >
            地址
            <!---->
          </div>
          <!---->
        </div>
        <div
          class="t-cell__note"
        >
          请选择地址
        </div>
        <div
          class="t-cell__right t-cell__right--middle"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      
      <div
        class="t-overlay"
        style="z-index: 1000; transition-duration: 300ms; display: none;"
      >
        <!---->
      </div>
      <div
        class="t-popup t-popup--bottom"
        style="display: none;"
      >
        <!---->
        
        <div
          class="t-cascader"
        >
          <div
            class="t-cascader__title"
          >
            选择地址
          </div>
          <div
            class="t-cascader__close-btn"
          >
            <svg
              class="t-icon t-icon-close"
              fill="none"
              height="1em"
              style="fill: none; font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="close"
              >
                <path
                  d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <!---->
          <div
            class="t-cascader__content"
          >
            <!---->
            <!---->
            <!---->
            <div
              class="t-cascader__options-container"
              style="width: 200vw; transform: translateX(-000vw);"
            >
              
              <div
                class="t-cascader__options"
              >
                <div
                  class="t-cascader-radio-group-0 slide-enter-from slide-enter-active"
                >
                  <div
                    class="t-radio-group"
                    role="radiogroup"
                  >
                    
                    <div
                      class="t-radio t-radio--right t-radio--block"
                    >
                      <input
                        class="t-radio__original"
                        name=""
                        type="radio"
                        value="110000"
                      />
                      <div
                        class="t-radio__icon t-radio__icon--right"
                      >
                        <div
                          class="placeholder"
                        />
                        <!---->
                      </div>
                      <div
                        class="t-radio__content"
                      >
                        <span
                          class="t-radio__title"
                          style=""
                        >
                          北京市
                        </span>
                        <!---->
                      </div>
                      <!---->
                    </div>
                    <div
                      class="t-radio t-radio--right t-radio--block"
                    >
                      <input
                        class="t-radio__original"
                        name=""
                        type="radio"
                        value="120000"
                      />
                      <div
                        class="t-radio__icon t-radio__icon--right"
                      >
                        <div
                          class="placeholder"
                        />
                        <!---->
                      </div>
                      <div
                        class="t-radio__content"
                      >
                        <span
                          class="t-radio__title"
                          style=""
                        >
                          天津市
                        </span>
                        <!---->
                      </div>
                      <!---->
                    </div>
                    
                    <!---->
                  </div>
                </div>
              </div>
              
            </div>
          </div>
        </div>
        
      </div>
      
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 进阶
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        带初始值
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell"
      >
        <div
          class="t-cell__left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          <div
            class="t-cell__title-text"
          >
            地址
            <!---->
          </div>
          <!---->
        </div>
        <div
          class="t-cell__note"
        >
          请选择地址
        </div>
        <div
          class="t-cell__right t-cell__right--middle"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      
      <div
        class="t-overlay"
        style="z-index: 1000; transition-duration: 300ms; display: none;"
      >
        <!---->
      </div>
      <div
        class="t-popup t-popup--bottom"
        style="display: none;"
      >
        <!---->
        
        <div
          class="t-cascader"
        >
          <div
            class="t-cascader__title"
          >
            选择地址
          </div>
          <div
            class="t-cascader__close-btn"
          >
            <svg
              class="t-icon t-icon-close"
              fill="none"
              height="1em"
              style="fill: none; font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="close"
              >
                <path
                  d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <!---->
          <div
            class="t-cascader__content"
          >
            <div
              class="t-cascader__steps"
            >
              
              <div
                class="t-cascader__step"
              >
                <div
                  class="t-cascader__step-dot t-cascader__step-dot--last"
                />
                <div
                  class="t-cascader__step-label t-cascader__step-label--active"
                >
                  选择选项
                </div>
                <svg
                  class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
              
            </div>
            <!---->
            <!---->
            <div
              class="t-cascader__options-container"
              style="width: 200vw; transform: translateX(-000vw);"
            >
              
              <div
                class="t-cascader__options"
              >
                <div
                  class="t-cascader-radio-group-0 slide-enter-from slide-enter-active"
                >
                  <div
                    class="t-radio-group"
                    role="radiogroup"
                  >
                    
                    <div
                      class="t-radio t-radio--right t-radio--block"
                    >
                      <input
                        class="t-radio__original"
                        name=""
                        type="radio"
                        value="110000"
                      />
                      <div
                        class="t-radio__icon t-radio__icon--right"
                      >
                        <div
                          class="placeholder"
                        />
                        <!---->
                      </div>
                      <div
                        class="t-radio__content"
                      >
                        <span
                          class="t-radio__title"
                          style=""
                        >
                          北京市
                        </span>
                        <!---->
                      </div>
                      <!---->
                    </div>
                    <div
                      class="t-radio t-radio--right t-radio--block"
                    >
                      <input
                        class="t-radio__original"
                        name=""
                        type="radio"
                        value="120000"
                      />
                      <div
                        class="t-radio__icon t-radio__icon--right"
                      >
                        <div
                          class="placeholder"
                        />
                        <!---->
                      </div>
                      <div
                        class="t-radio__content"
                      >
                        <span
                          class="t-radio__title"
                          style=""
                        >
                          天津市
                        </span>
                        <!---->
                      </div>
                      <!---->
                    </div>
                    
                    <!---->
                  </div>
                </div>
              </div>
              
            </div>
          </div>
        </div>
        
      </div>
      
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义 keys
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell"
      >
        <div
          class="t-cell__left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          <div
            class="t-cell__title-text"
          >
            地址
            <!---->
          </div>
          <!---->
        </div>
        <div
          class="t-cell__note"
        >
          请选择地址
        </div>
        <div
          class="t-cell__right t-cell__right--middle"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      
      <div
        class="t-overlay"
        style="z-index: 1000; transition-duration: 300ms; display: none;"
      >
        <!---->
      </div>
      <div
        class="t-popup t-popup--bottom"
        style="display: none;"
      >
        <!---->
        
        <div
          class="t-cascader"
        >
          <div
            class="t-cascader__title"
          >
            选择地址
          </div>
          <div
            class="t-cascader__close-btn"
          >
            <svg
              class="t-icon t-icon-close"
              fill="none"
              height="1em"
              style="fill: none; font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="close"
              >
                <path
                  d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <!---->
          <div
            class="t-cascader__content"
          >
            <div
              class="t-cascader__steps"
            >
              
              <div
                class="t-cascader__step"
              >
                <div
                  class="t-cascader__step-dot t-cascader__step-dot--last"
                />
                <div
                  class="t-cascader__step-label t-cascader__step-label--active"
                >
                  选择选项
                </div>
                <svg
                  class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
              
            </div>
            <!---->
            <!---->
            <div
              class="t-cascader__options-container"
              style="width: 200vw; transform: translateX(-000vw);"
            >
              
              <div
                class="t-cascader__options"
              >
                <div
                  class="t-cascader-radio-group-0 slide-enter-from slide-enter-active"
                >
                  <div
                    class="t-radio-group"
                    role="radiogroup"
                  >
                    
                    <div
                      class="t-radio t-radio--right t-radio--block"
                    >
                      <input
                        class="t-radio__original"
                        name=""
                        type="radio"
                        value="110000"
                      />
                      <div
                        class="t-radio__icon t-radio__icon--right"
                      >
                        <div
                          class="placeholder"
                        />
                        <!---->
                      </div>
                      <div
                        class="t-radio__content"
                      >
                        <span
                          class="t-radio__title"
                          style=""
                        >
                          北京市
                        </span>
                        <!---->
                      </div>
                      <!---->
                    </div>
                    <div
                      class="t-radio t-radio--right t-radio--block"
                    >
                      <input
                        class="t-radio__original"
                        name=""
                        type="radio"
                        value="120000"
                      />
                      <div
                        class="t-radio__icon t-radio__icon--right"
                      >
                        <div
                          class="placeholder"
                        />
                        <!---->
                      </div>
                      <div
                        class="t-radio__content"
                      >
                        <span
                          class="t-radio__title"
                          style=""
                        >
                          天津市
                        </span>
                        <!---->
                      </div>
                      <!---->
                    </div>
                    
                    <!---->
                  </div>
                </div>
              </div>
              
            </div>
          </div>
        </div>
        
      </div>
      
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        使用次级标题
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell"
      >
        <div
          class="t-cell__left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          <div
            class="t-cell__title-text"
          >
            地址
            <!---->
          </div>
          <!---->
        </div>
        <div
          class="t-cell__note"
        >
          请选择地址
        </div>
        <div
          class="t-cell__right t-cell__right--middle"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      
      <div
        class="t-overlay"
        style="z-index: 1000; transition-duration: 300ms; display: none;"
      >
        <!---->
      </div>
      <div
        class="t-popup t-popup--bottom"
        style="display: none;"
      >
        <!---->
        
        <div
          class="t-cascader"
        >
          <div
            class="t-cascader__title"
          >
            选择地址
          </div>
          <div
            class="t-cascader__close-btn"
          >
            <svg
              class="t-icon t-icon-close"
              fill="none"
              height="1em"
              style="fill: none; font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="close"
              >
                <path
                  d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <!---->
          <div
            class="t-cascader__content"
          >
            <div
              class="t-cascader__steps"
            >
              
              <div
                class="t-cascader__step"
              >
                <div
                  class="t-cascader__step-dot t-cascader__step-dot--last"
                />
                <div
                  class="t-cascader__step-label t-cascader__step-label--active"
                >
                  选择选项
                </div>
                <svg
                  class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
              
            </div>
            <!---->
            <div
              class="t-cascader__options-title"
            >
              请选择省份
            </div>
            <div
              class="t-cascader__options-container"
              style="width: 200vw; transform: translateX(-000vw);"
            >
              
              <div
                class="t-cascader__options"
              >
                <div
                  class="t-cascader-radio-group-0 slide-enter-from slide-enter-active"
                >
                  <div
                    class="t-radio-group"
                    role="radiogroup"
                  >
                    
                    <div
                      class="t-radio t-radio--right t-radio--block"
                    >
                      <input
                        class="t-radio__original"
                        name=""
                        type="radio"
                        value="110000"
                      />
                      <div
                        class="t-radio__icon t-radio__icon--right"
                      >
                        <div
                          class="placeholder"
                        />
                        <!---->
                      </div>
                      <div
                        class="t-radio__content"
                      >
                        <span
                          class="t-radio__title"
                          style=""
                        >
                          北京市
                        </span>
                        <!---->
                      </div>
                      <!---->
                    </div>
                    <div
                      class="t-radio t-radio--right t-radio--block"
                    >
                      <input
                        class="t-radio__original"
                        name=""
                        type="radio"
                        value="120000"
                      />
                      <div
                        class="t-radio__icon t-radio__icon--right"
                      >
                        <div
                          class="placeholder"
                        />
                        <!---->
                      </div>
                      <div
                        class="t-radio__content"
                      >
                        <span
                          class="t-radio__title"
                          style=""
                        >
                          天津市
                        </span>
                        <!---->
                      </div>
                      <!---->
                    </div>
                    
                    <!---->
                  </div>
                </div>
              </div>
              
            </div>
          </div>
        </div>
        
      </div>
      
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        异步加载
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell"
      >
        <div
          class="t-cell__left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          <div
            class="t-cell__title-text"
          >
            地址
            <!---->
          </div>
          <!---->
        </div>
        <div
          class="t-cell__note"
        >
          请选择地址
        </div>
        <div
          class="t-cell__right t-cell__right--middle"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      
      <div
        class="t-overlay"
        style="z-index: 1000; transition-duration: 300ms; display: none;"
      >
        <!---->
      </div>
      <div
        class="t-popup t-popup--bottom"
        style="display: none;"
      >
        <!---->
        
        <div
          class="t-cascader"
        >
          <div
            class="t-cascader__title"
          >
            选择地址
          </div>
          <div
            class="t-cascader__close-btn"
          >
            <svg
              class="t-icon t-icon-close"
              fill="none"
              height="1em"
              style="fill: none; font-size: 24px;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="close"
              >
                <path
                  d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          <!---->
          <div
            class="t-cascader__content"
          >
            <div
              class="t-cascader__steps"
            >
              
              <div
                class="t-cascader__step"
              >
                <div
                  class="t-cascader__step-dot t-cascader__step-dot--last"
                />
                <div
                  class="t-cascader__step-label t-cascader__step-label--active"
                >
                  选择选项
                </div>
                <svg
                  class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
              
            </div>
            <!---->
            <!---->
            <div
              class="t-cascader__options-container"
              style="width: 200vw; transform: translateX(-000vw);"
            >
              
              <div
                class="t-cascader__options"
              >
                <div
                  class="t-cascader-radio-group-0 slide-enter-from slide-enter-active"
                >
                  <div
                    class="t-radio-group"
                    role="radiogroup"
                  >
                    
                    <div
                      class="t-radio t-radio--right t-radio--block"
                    >
                      <input
                        class="t-radio__original"
                        name=""
                        type="radio"
                        value="440300"
                      />
                      <div
                        class="t-radio__icon t-radio__icon--right"
                      >
                        <div
                          class="placeholder"
                        />
                        <!---->
                      </div>
                      <div
                        class="t-radio__content"
                      >
                        <span
                          class="t-radio__title"
                          style=""
                        >
                          深圳市
                        </span>
                        <!---->
                      </div>
                      <!---->
                    </div>
                    
                    <!---->
                  </div>
                </div>
              </div>
              
            </div>
          </div>
        </div>
        
      </div>
      
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        选择任意一项
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-cell"
        data-v-089206a7=""
      >
        <div
          class="t-cell__left"
        >
          <!---->
          <!---->
        </div>
        <div
          class="t-cell__title"
        >
          <div
            class="t-cell__title-text"
          >
            地址
            <!---->
          </div>
          <!---->
        </div>
        <div
          class="t-cell__note"
        >
          请选择地址
        </div>
        <div
          class="t-cell__right t-cell__right--middle"
        >
          <div
            class="t-cell__right-icon"
          >
            <svg
              class="t-icon t-icon-chevron-right"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
      
      <div
        class="t-overlay"
        style="z-index: 1000; transition-duration: 300ms; display: none;"
      >
        <!---->
      </div>
      <div
        class="t-popup t-popup--bottom"
        style="display: none;"
      >
        <!---->
        
        <div
          class="t-cascader"
        >
          <div
            class="t-cascader__title"
          >
            选择地址
          </div>
          <div
            class="t-cascader__close-btn"
          >
            
            <span
              class="confirm-btn"
              data-v-089206a7=""
            >
              确定
            </span>
            
          </div>
          <!---->
          <div
            class="t-cascader__content"
          >
            <div
              class="t-cascader__steps"
            >
              
              <div
                class="t-cascader__step"
              >
                <div
                  class="t-cascader__step-dot t-cascader__step-dot--last"
                />
                <div
                  class="t-cascader__step-label t-cascader__step-label--active"
                >
                  选择选项
                </div>
                <svg
                  class="t-icon t-icon-chevron-right t-cascader__step-arrow"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
              
            </div>
            <!---->
            <!---->
            <div
              class="t-cascader__options-container"
              style="width: 200vw; transform: translateX(-000vw);"
            >
              
              <div
                class="t-cascader__options"
              >
                <div
                  class="t-cascader-radio-group-0 slide-enter-from slide-enter-active"
                >
                  <div
                    class="t-radio-group"
                    role="radiogroup"
                  >
                    
                    <div
                      class="t-radio t-radio--right t-radio--block"
                    >
                      <input
                        class="t-radio__original"
                        name=""
                        type="radio"
                        value="110000"
                      />
                      <div
                        class="t-radio__icon t-radio__icon--right"
                      >
                        <div
                          class="placeholder"
                        />
                        <!---->
                      </div>
                      <div
                        class="t-radio__content"
                      >
                        <span
                          class="t-radio__title"
                          style=""
                        >
                          北京市
                        </span>
                        <!---->
                      </div>
                      <!---->
                    </div>
                    <div
                      class="t-radio t-radio--right t-radio--block"
                    >
                      <input
                        class="t-radio__original"
                        name=""
                        type="radio"
                        value="120000"
                      />
                      <div
                        class="t-radio__icon t-radio__icon--right"
                      >
                        <div
                          class="placeholder"
                        />
                        <!---->
                      </div>
                      <div
                        class="t-radio__content"
                      >
                        <span
                          class="t-radio__title"
                          style=""
                        >
                          天津市
                        </span>
                        <!---->
                      </div>
                      <!---->
                    </div>
                    
                    <!---->
                  </div>
                </div>
              </div>
              
            </div>
          </div>
        </div>
        
      </div>
      
      
      
    </div>
  </div>
</div>
`;

exports[`Cascader > Cascader themeTabVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell"
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        地址
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-cell__note"
    >
      请选择地址
    </div>
    <div
      class="t-cell__right t-cell__right--middle"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-right"
          >
            <path
              d="M9.5 17.5L15 12L9.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--bottom"
    style="display: none;"
  >
    <!---->
    
    <div
      class="t-cascader"
    >
      <div
        class="t-cascader__title"
      >
        选择地址
      </div>
      <div
        class="t-cascader__close-btn"
      >
        <svg
          class="t-icon t-icon-close"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close"
          >
            <path
              d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <!---->
      <div
        class="t-cascader__content"
      >
        <!---->
        <!---->
        <!---->
        <div
          class="t-cascader__options-container"
          style="width: 200vw; transform: translateX(-000vw);"
        >
          
          <div
            class="t-cascader__options"
          >
            <div
              class="t-cascader-radio-group-0 slide-enter-from slide-enter-active"
            >
              <div
                class="t-radio-group"
                role="radiogroup"
              >
                
                <div
                  class="t-radio t-radio--right t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    name=""
                    type="radio"
                    value="110000"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--right"
                  >
                    <div
                      class="placeholder"
                    />
                    <!---->
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style=""
                    >
                      北京市
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <div
                  class="t-radio t-radio--right t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    name=""
                    type="radio"
                    value="120000"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--right"
                  >
                    <div
                      class="placeholder"
                    />
                    <!---->
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style=""
                    >
                      天津市
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                
                <!---->
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
  
  
</div>
`;

exports[`Cascader > Cascader withTitleVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell"
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        地址
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-cell__note"
    >
      请选择地址
    </div>
    <div
      class="t-cell__right t-cell__right--middle"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-right"
          >
            <path
              d="M9.5 17.5L15 12L9.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--bottom"
    style="display: none;"
  >
    <!---->
    
    <div
      class="t-cascader"
    >
      <div
        class="t-cascader__title"
      >
        选择地址
      </div>
      <div
        class="t-cascader__close-btn"
      >
        <svg
          class="t-icon t-icon-close"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close"
          >
            <path
              d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <!---->
      <div
        class="t-cascader__content"
      >
        <div
          class="t-cascader__steps"
        >
          
          <div
            class="t-cascader__step"
          >
            <div
              class="t-cascader__step-dot t-cascader__step-dot--last"
            />
            <div
              class="t-cascader__step-label t-cascader__step-label--active"
            >
              选择选项
            </div>
            <svg
              class="t-icon t-icon-chevron-right t-cascader__step-arrow"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
        <!---->
        <div
          class="t-cascader__options-title"
        >
          请选择省份
        </div>
        <div
          class="t-cascader__options-container"
          style="width: 200vw; transform: translateX(-000vw);"
        >
          
          <div
            class="t-cascader__options"
          >
            <div
              class="t-cascader-radio-group-0 slide-enter-from slide-enter-active"
            >
              <div
                class="t-radio-group"
                role="radiogroup"
              >
                
                <div
                  class="t-radio t-radio--right t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    name=""
                    type="radio"
                    value="110000"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--right"
                  >
                    <div
                      class="placeholder"
                    />
                    <!---->
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style=""
                    >
                      北京市
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <div
                  class="t-radio t-radio--right t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    name=""
                    type="radio"
                    value="120000"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--right"
                  >
                    <div
                      class="placeholder"
                    />
                    <!---->
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style=""
                    >
                      天津市
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                
                <!---->
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
  
  
</div>
`;

exports[`Cascader > Cascader withValueVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-cell"
  >
    <div
      class="t-cell__left"
    >
      <!---->
      <!---->
    </div>
    <div
      class="t-cell__title"
    >
      <div
        class="t-cell__title-text"
      >
        地址
        <!---->
      </div>
      <!---->
    </div>
    <div
      class="t-cell__note"
    >
      请选择地址
    </div>
    <div
      class="t-cell__right t-cell__right--middle"
    >
      <div
        class="t-cell__right-icon"
      >
        <svg
          class="t-icon t-icon-chevron-right"
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="chevron-right"
          >
            <path
              d="M9.5 17.5L15 12L9.5 6.5"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
    </div>
  </div>
  
  <div
    class="t-overlay"
    style="z-index: 1000; transition-duration: 300ms; display: none;"
  >
    <!---->
  </div>
  <div
    class="t-popup t-popup--bottom"
    style="display: none;"
  >
    <!---->
    
    <div
      class="t-cascader"
    >
      <div
        class="t-cascader__title"
      >
        选择地址
      </div>
      <div
        class="t-cascader__close-btn"
      >
        <svg
          class="t-icon t-icon-close"
          fill="none"
          height="1em"
          style="fill: none; font-size: 24px;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="close"
          >
            <path
              d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
      </div>
      <!---->
      <div
        class="t-cascader__content"
      >
        <div
          class="t-cascader__steps"
        >
          
          <div
            class="t-cascader__step"
          >
            <div
              class="t-cascader__step-dot t-cascader__step-dot--last"
            />
            <div
              class="t-cascader__step-label t-cascader__step-label--active"
            >
              选择选项
            </div>
            <svg
              class="t-icon t-icon-chevron-right t-cascader__step-arrow"
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="chevron-right"
              >
                <path
                  d="M9.5 17.5L15 12L9.5 6.5"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
          </div>
          
        </div>
        <!---->
        <!---->
        <div
          class="t-cascader__options-container"
          style="width: 200vw; transform: translateX(-000vw);"
        >
          
          <div
            class="t-cascader__options"
          >
            <div
              class="t-cascader-radio-group-0 slide-enter-from slide-enter-active"
            >
              <div
                class="t-radio-group"
                role="radiogroup"
              >
                
                <div
                  class="t-radio t-radio--right t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    name=""
                    type="radio"
                    value="110000"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--right"
                  >
                    <div
                      class="placeholder"
                    />
                    <!---->
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style=""
                    >
                      北京市
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <div
                  class="t-radio t-radio--right t-radio--block"
                >
                  <input
                    class="t-radio__original"
                    name=""
                    type="radio"
                    value="120000"
                  />
                  <div
                    class="t-radio__icon t-radio__icon--right"
                  >
                    <div
                      class="placeholder"
                    />
                    <!---->
                  </div>
                  <div
                    class="t-radio__content"
                  >
                    <span
                      class="t-radio__title"
                      style=""
                    >
                      天津市
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                
                <!---->
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
  
  
</div>
`;
